noinst_HEADERS = \
    acl.h  \
    conn.h  \
    fstab.h  \
    hsfs.h  \
    hsi_nfs3.h  \
    hsx_fuse.h  \
    log.h  \
    mount_constants.h  \
    nfs_mntent.h  \
    nfs_paths.h  \
    nls.h  \
    xcommon.h \
    hsfs/bitops.h \
    hsfs/compiler.h \
    hsfs/err.h  \
    hsfs/hash.h  \
    hsfs/hashtable.h  \
    hsfs_nfs.h  \
    hsfs/list.h  \
    hsfs/log2.h  \
    hsfs/types.h \
    libnfs-private.h \
    libnfs-multithreading.h \
    slist.h
